@@ -318,6 +318,10 @@ int  dgets(int fd, char *buf, int num)
  */
 char *inetntop(int af, const void *in, char *out, size_t the_size)
 {
+#ifdef IPV6_COMPRESSED
+	inet_ntop(af, in, out, the_size);
+	return out;
+#else
 	static char local_dummy[MYDUMMY_SIZE];
 
 	inet_ntop(af, in, local_dummy, the_size);
@@ -364,6 +368,7 @@ char *inetntop(int af, const void *in, char *out, size_t the_size)
 	else
 		bcopy(local_dummy, out, 64);
 	return out;
+#endif
 }
 
 /* Made by Potvin originally, i guess */
