@@ -481,3 +481,5 @@
   - Introduced two new macros DYN_LOCAL and DYN_FREE to allow creation/deletion of dynamically
     sized arrays in the most efficient manner (C99 variable length, alloca, or malloc)
 - Changed the +z cannot join message to be a bit more descriptive (#0002148) suggested by cust.
+- Added a config.h options, IPV6_COMPRESSED to make Unreal use compressed IPv6 addresses where
+  possible (#0002107) suggested by Neo-Vortex.
